# mitra

./: Procfile  README.md  pants.toml  pyproject.toml
mitra/: app.py  bot.py  config.py
src/python/mitra/: BUILD  bot.py  pyproject.toml  requirements.txt
